tests/lean/eqn_compiler_error_msg.lean.expected.out
eqn_compiler_error_msg.lean:5:2: error: invalid function application in pattern, it cannot be reduced to a constructor (possible solution, mark term as inaccessible using '.( )')
  .p + .n
eqn_compiler_error_msg.lean:5:24: error: ill-formed match/equations expression
